--- a/index.html
+++ b/index.html
@@ -137,14 +137,10 @@
     }
 
     .menu-icon { 
-      width: 32px;            /* Ukuran ikon sedikit diperbesar */
+      width: 32px; 
       height: 32px; 
-      background-color: #fff; /* Memberi warna dasar putih */
-      border-radius: 50%;     /* Membuatnya bulat sempurna */
-      padding: 5px;           /* Jarak logo dari pinggiran bulat putih */
       object-fit: contain;
-      flex-shrink: 0;         /* Agar ikon tidak gepeng */
-      /* Hapus filter invert sebelumnya agar logo asli terlihat di dalam bulatan */
+      flex-shrink: 0;
     }
 
     /* ===== Footer ===== */
